# cqrs_mediator

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: coverage.yml
meator/: __init__.py  _constants.py  errors.py
meator/_utils/: sentinel_default.py
meator/dispatchers/: __init__.py  base.py  command.py  errors.py  query.py
meator/entities/: query.py  request.py
meator/interfaces/: __init__.py  middleware.py  types.py
meator/interfaces/dispatcher/: __init__.py  command.py  interface.py  query.py
meator/interfaces/handlers/: __init__.py  command.py  event.py  query.py  request.py
meator/interfaces/observer/: __init__.py  event.py  interface.py
meator/middlewares/: __init__.py  base.py  wrap_handler.py
meator/observers/: __init__.py  base.py  event.py
mediator/: __init__.py
mediator/_utils/: sentinel_default.py
mediator/dispatchers/: __init__.py  base.py  command.py  errors.py  query.py
mediator/entities/: __init__.py  command.py  event.py
mediator/interfaces/: dispatcher.py  middleware.py  observer.py  types.py
mediator/interfaces/handlers/: __init__.py  command.py  event.py  query.py  request.py
mediator/middlewares/: __init__.py  base.py  wrap_handler.py
mediator/observers/: __init__.py  base.py  event.py
tests/command/: test_multiply_handlers.py
tests/dispatcher/: test_middleware.py  test_middleware_sequence.py  test_no_handler.py  test_normal_pipeline.py
tests/middlewares/: test_middleware_multiply_handlers.py  test_multiply_middleware_multiply_handlers.py
tests/mock/: commands.py  events.py  middleware.py  state.py
tests/observer/: test_middleware.py  test_middleware_sequence.py  test_multiply_handlers.py  test_normal_pipeline.py
